--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,39 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+html {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: cursive;
+  background-color: rosybrown;
+}
+
+.header {
+  text-align: center;
+}
+
+button {
+  width: 5rem;
+  height: 1.5rem;
+}
+
+.content-box {
+  display: flex; 
+  justify-content: space-evenly; 
+  flex-direction: row;
+  padding-top: 3%;
+  flex-wrap:wrap
+}
+
+.add-form {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-evenly;
+}
+
+.important {
+  border-left: 5px solid pink;
+  padding-left: 5px;
 }
